[package]
name = "envmon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_yaml = {version = "0.8.23"}
serde ={version = "1.0.136", features = ["derive"] }
clap = { version = "3.1.2", features = ["derive"] }
url = "2.2.2"

