[package]
name = "envmon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_yaml = {version = "0.8.23"}
serde ={version = "1.0.136", features = ["derive"] }
clap = { version = "3.1.2", features = ["derive"] }
url = "2.2.2"
derive_more = "0.99.17"
anyhow = "1.0.56"
log = "0.4.14"
env_logger = "0.9.0"
signal-hook = "0.3.13"